force-app/main/default/objects/File_Upload_Details__c/File_Upload_Details__c.object-meta.xml
<CustomObject>
    <description>PGP-0008 : Store uploaded file details to Target system</description>
    <label>File Upload Details</label>
    <nameField>
        <displayFormat>FLU-{YYYYMMDD}-{000000}</displayFormat>
        <label>File Upload Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>File Upload Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>