force-app/main/default/objects/File_Upload_Details__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>PGP-0008 : Stores file name</description>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>