force-app/main/default/objects/File_Upload_Details__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>PGP-0008 : Store record Id for selected upload files.</description>
    <label>Record Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>