force-app/main/default/objects/File_Upload_Details__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <description>PGP-0008: Stores target location for upload</description>
    <label>Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>